# portfolio

./: .env.example  .env.template  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  Studio  _config.yml  agentic_core.py  docker-compose.yml  httpx.py  mypy.ini  prometheus_client.py  requirements-dev.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
Agents/: Team  base_agent  chatbot_agent  contract_sign_monitor_agent  crm_entry_agent  crm_pipeline_agent  csat_checker_agent  csat_scheduler_agent  email_reply_monitor_agent  onboarding_agent  orchestrator  segmentation_ad_targeting_agent  test_agents  test_orchestrator  upsell_agent
configs/: integrations.yaml  model_policy.json
docs/: Makefile  agents_overview.md  api_examples.md  architecture.md  cli.md  components.md  conf.py  config_editor.md  environment.md  helm.md  index.md  index.rst  logging.md  memory_service.md  metrics.md  team_schema.json  workflow_schema.json  workflows.md
frontend/: README.md  index.html  package.json  vite.config.js
helm/: README.md
scripts/: run_tests.sh  setup.sh
src/: __init__.py  api.py  base_orchestrator.py  cli.py  cli_assistant.py  config.py  constants.py  crm_connector.py  db.py  debugger_agent.py  dev_assist.py  events.py  jsonschema_stub.py  key_admin.py  markdown_tasks.py  memory_service.py  orchestrator.py  orchestrator_config.json  plugin_manager.py  qa_agent.py  solution_orchestrator.py  suppliers.py  team_orchestrator.py  user_context.py  user_settings.py  workflow_ui.py
tests/: __init__.py  httpx_stub.py  test_activity_logger.py  test_ad_tool.py  test_analytics_agent.py  test_api.py  test_api_config.py  test_api_main.py  test_async_event_bus.py  test_async_memory_interface.py  test_async_rest_memory_service.py  test_chatbot_agent.py  (+74 more)
(+339 files in other folders)
