[metadata]
name = brookside
version = 1.0.0

[options]
packages = find:

[options.entry_points]
console_scripts =
    brookside-cli = src.cli:main
    brookside-assistant = src.cli_assistant:main
brookside.plugins =
    log_event = src.plugins.log_event_plugin:LogEventPlugin
    invoke_agent = src.plugins.invoke_agent_plugin:InvokeAgentPlugin
    notify_human = src.plugins.notify_human_plugin:NotifyHumanPlugin
    lead_capture = src.plugins.lead_capture_plugin:LeadCapturePlugin
    lead_enrichment = src.plugins.lead_enrichment_plugin:LeadEnrichmentPlugin
    lead_scoring = src.plugins.lead_scoring_plugin:LeadScoringPlugin
    email_outreach = src.plugins.email_outreach_plugin:EmailOutreachPlugin
    generate_proposal = src.plugins.generate_proposal_plugin:GenerateProposalPlugin
    negotiation_agent = src.plugins.negotiation_agent_plugin:NegotiationAgentPlugin
    contract_agent = src.plugins.contract_agent_plugin:ContractAgentPlugin
    onboarding_agent = src.plugins.onboarding_agent_plugin:OnboardingAgentPlugin
    csat_checker_agent = src.plugins.csat_checker_agent_plugin:CsatCheckerAgentPlugin
    upsell_agent = src.plugins.upsell_agent_plugin:UpsellAgentPlugin
    referral_agent = src.plugins.referral_agent_plugin:ReferralAgentPlugin
    chatbot_agent = src.plugins.chatbot_agent_plugin:ChatbotAgentPlugin
    visitor_tracking = src.plugins.visitor_tracking_plugin:VisitorTrackingPlugin
    segmentation_and_targeting = src.plugins.segmentation_and_targeting_plugin:SegmentationAndTargetingPlugin
    crm_entry_dedup = src.plugins.crm_entry_dedup_plugin:CrmEntryDedupPlugin
    crm_pipeline_agent = src.plugins.crm_pipeline_agent_plugin:CrmPipelineAgentPlugin
    push_metric = src.plugins.push_metric_plugin:PushMetricPlugin
